--- a/inicio.html
+++ b/inicio.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>INICIO | SOYCREACTIVO</title>
+
+  <!-- vendors -->
+  <link rel="stylesheet" href="./vendors/identidad/identidad.css">
+  <link rel="stylesheet" href="./vendors/bootstrap/bootstrap.css">
+  <link rel="stylesheet" href="./vendors/to-animation/to-animation.css  ">
+  <link rel="stylesheet" href="./vendors/modal/modal.css">
+  <link rel="stylesheet" href="./vendors/dropdown/dropdown.css">
+  <!-- ======= -->
 
   <link rel="stylesheet" href="./resources/css/inicio.css">
   <link rel="shortcut icon" href="./resources/img/logo/isotipo-header.png" type="image/png">
@@ -11,16 +20,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=7">
   <meta name="description"
     content="Somos una startup que brinda soluciones audiovisuales y publicitarias. Queremos trabajar con negocios y marcas que no le tengan miedo a destacar de la competencía con producciones de calidad.">
-  <meta name="keywords" content="creActiva, Paneles Solares, Placas Solares, Energía Solar">
+  <meta name="keywords" content="creActiva">
   <meta name="author" content="creActiva">
-  <meta name="copyright" content="creActiva"/>
-  <meta name="image" content="./resources/img/logo/imagotipo.png">
+  <meta name="copyright" content="creActiva" />
+  <meta name="image" content="./resources/img/logo/logotipo.png">
 
   <!--  Essential META Tags -->
   <meta property="og:title" content="creActiva">
   <meta property="og:description"
     content="Somos una startup que brinda soluciones audiovisuales y publicitarias. Queremos trabajar con negocios y marcas que no le tengan miedo a destacar de la competencía con producciones de calidad.">
-  <meta property="og:image" content="./resources/img/logo/imagotipo.png">
+  <meta property="og:image" content="./resources/img/logo/logotipo.png">
   <!--  Non-Essential, But Recommended -->
   <meta property="og:site_name" content="creActiva">
   <!-- Open Graph / Facebook -->
@@ -29,18 +38,126 @@
   <meta property="og:title" content="Portada | creActiva">
   <meta property="og:description"
     content="Somos una startup que brinda soluciones audiovisuales y publicitarias. Queremos trabajar con negocios y marcas que no le tengan miedo a destacar de la competencía con producciones de calidad.">
-  <meta property="og:image" content="./resources/img/logo/imagotipo.png">
+  <meta property="og:image" content="./resources/img/logo/logotipo.png">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://soycreactivo.com/">
   <meta property="twitter:title" content="Portada | creActiva">
   <meta property="twitter:description"
     content="Somos una startup que brinda soluciones audiovisuales y publicitarias. Queremos trabajar con negocios y marcas que no le tengan miedo a destacar de la competencía con producciones de calidad.">
-  <meta property="twitter:image" content="./resources/img/logo/imagotipo.png">
+  <meta property="twitter:image" content="./resources/img/logo/logotipo.png">
 </head>
+
 <body>
-  
-  
+  <div class="modal">
+    <div class="modal-content">
+      <span class="close-button">&#10006;</span>
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item w-100" src="https://www.youtube.com/embed/C0DPdy98e4c"
+          allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <section id="S1" class="banner p-lg-5 p-2 bg-orange text-light">
+    <div class="border-case">
+      <h1 class="display-1 pb-2">Has visto hasta donde llegar con tu Idea</h1>
+      <h3 class="item-1 pb-2">Cree, crea y crece</h2>
+      <p>+ que una agencia digital</p>
+      <div class="justify-content-end d-flex">
+        <div class="btn-play item-2">
+          <button name="play"></button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="S2" class="to-orange py-5">
+    <div class="S2__item">
+      <h2>Equipo de  Cretivos Orientados a Medios Digitales</h2>
+    </div>
+    <div class="S2__item">
+      <h3>Si te lo puedes imaginar, lo puedes hacer realidad</h3>
+      <p>Nosotros combinamos estrategia, diseño, tecnología y experiencias audiovisuales para llevar a las empresas a un
+        siguiente nivel</p>
+      </div>
+      <div class="S2__item w-100">
+        <div class="embed-responsive embed-responsive-16by9 w-50 justify-content-center align-items-center" style=" border: 20px solid transparent; border-image: radial-gradient( circle, #92196D, #550D82)1;    box-shadow: 0 0 20px var(--black);">
+          <!-- <iframe class="embed-responsive-item" src="" allowfullscreen></iframe> -->
+          <div class="btn-play item-2 embed-responsive-item">
+            <button name="play"></button>
+          </div>  
+        </div>
+      </div>
+      
+  </section>
+  <section id="S3" class="to-blue py-5">
+    <h3>Nuestro enfoque está en brindar experiencias con nosotros y so parte con nuestros clientes</h3>
+    <div class="S3__item">
+
+      <div class='dropdown'>
+        <div class='title pointerCursor'>
+          <button class="fa fa-plus-less">
+            <span class="show"></span><span class="show"></span></button>
+          <h3 class="d-inline-flex pb-0 mb-0 text-md-left text-center">Web</h3>
+        </div>
+        <div class='menu pointerCursor flex-column align-items-start'>
+          <div>Páginas de aterrizaje</div>
+          <div>Corporativos o personales</div>
+          <div>Tiendas virtuales</div>
+          <div>Sistemas educativos virtuales</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="S3__item">
+      <div class='dropdown'>
+        <div class='title pointerCursor'>
+          <button class="fa fa-plus-less">
+            <span></span><span></span></button>
+          <h3 class="d-inline-flex pb-0 mb-0 text-md-left text-center">Audiovisual</h3>
+        </div>
+        <div class='menu pointerCursor hide flex-column align-items-start'>
+          <div>Páginas de aterrizaje</div>
+          <div>Corporativos o personales</div>
+          <div>Tiendas virtuales</div>
+          <div>Sistemas educativos virtuales</div>
+        </div>
+      </div>
+    </div>
+    <div class="S3__item">
+      <div class='dropdown'>
+        <div class='title pointerCursor'>
+          <button class="fa fa-plus-less">
+            <span></span><span></span></button>
+          <h3 class="d-inline-flex pb-0 mb-0 text-md-left text-center">Publicidad</h3>
+        </div>
+        <div class='menu pointerCursor hide flex-column align-items-start'>
+          <div>Páginas de aterrizaje</div>
+          <div>Corporativos o personales</div>
+          <div>Tiendas virtuales</div>
+          <div>Sistemas educativos virtuales</div>
+        </div>
+      </div>
+    </div>
+    <div class="S3__item">
+      <div class='dropdown'>
+        <div class='title pointerCursor'>
+          <button class="fa fa-plus-less">
+            <span></span><span></span></button>
+          <h3 class="d-inline-flex pb-0 mb-0 text-md-left text-center">Formaciones</h3>
+        </div>
+        <div class='menu pointerCursor hide flex-column align-items-start'>
+          <div>Páginas de aterrizaje</div>
+          <div>Corporativos o personales</div>
+          <div>Tiendas virtuales</div>
+          <div>Sistemas educativos virtuales</div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="./vendors/modal/modal.js"></script>
+  <script src="./vendors/to-animation/to-animation.js"></script>
+  <script src="./vendors/dropdown/dropdown.js"></script>
   <script src="./resources/js/inicio.js"></script>
 </body>
+
 </html>
